--- a/app/composer.json
+++ b/app/composer.json
@@ -8,6 +8,7 @@
         "symfony/console": "4.4.*",
         "symfony/dotenv": "4.4.*",
         "symfony/flex": "^1.3.1",
+        "symfony/framework-bundle": "4.4.*",
         "symfony/yaml": "4.4.*"
     },
     "require-dev": {
@@ -38,7 +39,8 @@
     },
     "scripts": {
         "auto-scripts": {
-
+            "cache:clear": "symfony-cmd",
+            "assets:install %PUBLIC_DIR%": "symfony-cmd"
         },
         "post-install-cmd": [
             "@auto-scripts"
